# vulcan

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  memory.x  png2rgb565.py
.cargo/: config.toml
arducam_stm32/: Cargo.toml  README.md
arducam_stm32/src/: lib.rs  ov5642_regs.rs
libvulcan/: Cargo.toml
libvulcan/src/: main.rs
vulcan/: Cargo.toml  build.rs
vulcan/assets/: volcano.raw
vulcan/src/: framebuffer.rs  home.rs  keypad.rs  main.rs  splash.rs  types.rs  update.rs  util.rs  view.rs  views.rs
vulcan/src/view/: create.rs  export.rs  home.rs  mod.rs  sign.rs  splash.rs  util.rs  verify.rs
